compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "16#FFFFFFFFFFFFFFFF * (16#8000000000000000 + 1)"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_state: [
                Error(IntOverflow),
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0, unit: UnitId(0) },
            },
        },
    },
}
