compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-11.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "16#80000001 * -1"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(5))), span: Span { file: None, range: 11..27 }, state: Error(ConstError { kind: IntOverflow, span: Span { file: None, range: 23..24 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(5))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: IntOverflow, span: Span { file: None, range: 23..24 } }

error at 23..24: integer overflow in compile-time expression

