compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-13.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1e100 div 1

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..22 }, state: Error(ConstError { kind: IntOverflow, span: Span { file: None, range: 17..20 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(4))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: IntOverflow, span: Span { file: None, range: 17..20 } }

error at 17..20: integer overflow in compile-time expression

