compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-14.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1e100 div 1.0

---
"_"@(FileId(1), 6..7) -> ConstError { kind: IntOverflow, span: (FileId(1), 17..20) }

error in file FileId(1) at 17..20: integer overflow in compile-time expression

