compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-17.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-16#FFFFFFFF"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..23 }, state: Error(ConstError { kind: IntOverflow, span: Span { file: None, range: 11..12 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: IntOverflow, span: Span { file: None, range: 11..12 } }

error at 11..12: integer overflow in compile-time expression

