compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-18.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "--16#80000000 % no overflow"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..24 }, state: Value(Integer(ConstInt { magnitude: 2147483648, sign: Positive, width: As32 })) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 2147483648, sign: Positive, width: As32 })


