compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "16#80000000 % no overflow"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..36, state: Value(Integer(ConstInt { magnitude: 2147483648, sign: Positive, width: As32 })) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 2147483648, sign: Positive, width: As32 })

